--- a/front/index.html
+++ b/front/index.html
@@ -9,6 +9,20 @@
   </style>
 </head>
 <body>
+
+  <!-- Contenedor de labels -->
+  <div id="labels" style="position:fixed; inset:0; pointer-events:none; z-index: 20;"></div>
+
+  <!-- Topbar con botón de inicio -->
+  <div style="position:fixed; top:12px; right:12px; z-index: 30; pointer-events:auto;">
+    <button id="btn-start" style="padding:8px 12px;border-radius:10px;border:1px solid #ffffff22;background:#1d4ed8;color:#fff;cursor:pointer;">
+      Iniciar simulación
+    </button>
+  </div>
+
+  <!-- Panel de info -->
+  <div id="info-panel" style="position:fixed; top:12px; left:12px; width:320px; max-height:65vh; overflow:auto; background:rgba(11,18,32,.92); color:#e5e7eb; border:1px solid #ffffff22; border-radius:12px; padding:12px; font:13px system-ui; z-index:25; display:none;"></div>
+
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
