--- a/front/index.html
+++ b/front/index.html
@@ -16,7 +16,7 @@
   <!-- Topbar con botón de inicio -->
   <div style="position:fixed; top:12px; right:12px; z-index: 30; pointer-events:auto;">
     <button id="btn-start" style="padding:8px 12px;border-radius:10px;border:1px solid #ffffff22;background:#1d4ed8;color:#fff;cursor:pointer;">
-      Iniciar simulación
+      Start simulation
     </button>
   </div>
 
